[package]
name = "jrnl"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
inquire = { version = "0.7.5", features = ["date", "editor"] }
pager = "0.16.1"
comfy-table = { version = "7.1.4", features = ["custom_styling"]}
toml = "0.8.20"
serde = { version = "1.0.219", features = ["serde_derive"] }

