[package]
name = "jrnl"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A simple tool to maintain a journal, completely in CLI"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
inquire = { version = "0.7.5", features = ["date", "editor"] }
pager = "0.16.1"
comfy-table = { version = "7.1.4", features = ["custom_styling"]}
toml = "0.8.20"
serde = { version = "1.0.219", features = ["serde_derive"] }
term_size = "0.3.2"
stringmetrics = "2.2.2"
shellexpand = "3.1.0"
parse_datetime = "0.8.0"

